// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummarry with 1 expense  1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </p>
  <div>
    <Link
      replace={false}
      to="/create"
    >
      Add Expense
    </Link>
  </div>
</div>
`;

exports[`should correctly render ExpensesSummarry with multiple expense  1`] = `
<div>
  <p>
    Viewing 
    23
     
    expenses
     totalling 
    $2,359.98
  </p>
  <div>
    <Link
      replace={false}
      to="/create"
    >
      Add Expense
    </Link>
  </div>
</div>
`;
